--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,3 +101,11 @@ main{
     position: relative;
     left: 20px;
 }
+
+#scoreboard{
+    display: none;
+}
+
+#scoreboard ul{
+    list-style: none;
+}
